Fix logo not showing up

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -186,7 +186,8 @@ span.s6 { background-color: inherit; }
     height: 4rem;
     vertical-align: middle;
     padding: 1rem 0;
-    margin-right: 2rem; }
+    margin-right: 2rem;
+    display: block; }
   .navbar-link {
     text-transform: uppercase;
     font-size: 11px;
